<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#45A7AE"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_above="@+id/bottom_navigation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#45A7AE"
            android:gravity="center|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/title"
                android:gravity="center"
                android:text="G1 TESTING HUB"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="G1 Test: Road Rules"
                android:textColor="@color/black"
                android:textStyle="bold|italic" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/g1re"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/mainbuttons"
                android:gravity="center_horizontal|center_vertical"
                android:paddingStart="10dp"
                android:text="@string/t1"
                android:textColor="@android:color/black"
                android:textStyle="normal|bold"
                app:layout_constraintTop_toTopOf="parent" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/g1rm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/mainbuttons"
                android:gravity="center_horizontal|center_vertical"
                android:paddingStart="10dp"
                android:text="@string/t2"
                android:textStyle="normal|bold" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/g1rh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/mainbuttons"
                android:gravity="center_horizontal|center_vertical"
                android:paddingStart="10dp"
                android:text="@string/t3"
                android:textStyle="normal|bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:text="G1 Test: Road Signs"
                android:textColor="@color/black"
                android:textStyle="bold|italic" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/g1se"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/mainbuttons"
                android:gravity="center_horizontal|center_vertical"
                android:paddingStart="10dp"
                android:text="@string/y1"
                android:textColor="@android:color/black"
                android:textStyle="normal|bold" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/g1sm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/mainbuttons"
                android:gravity="center_horizontal|center_vertical"
                android:paddingStart="10dp"
                android:text="@string/y2"
                android:textColor="@android:color/black"
                android:textStyle="normal|bold" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/g1sh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/mainbuttons"
                android:gravity="center_horizontal|center_vertical"
                android:paddingStart="10dp"
                android:text="@string/y3"
                android:textColor="@android:color/black"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/title"
                android:gravity="center"
                android:text="STUDY HUB"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


<!--            <ImageView-->
<!--                android:id="@+id/imageView8"-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:srcCompat="@drawable/web1" />-->

<!--            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton-->
<!--                android:id="@+id/button3"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="25dp"-->
<!--                android:background="@drawable/downloadbutton"-->
<!--                android:text="Vist Link"-->
<!--                android:textColor="#FFFFFF"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:spinning_bar_color="#FFFFFF" />-->



            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                app:srcCompat="@drawable/learn1" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:background="@drawable/downloadbutton"
                android:text="Free Download"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:spinning_bar_color="#FFFFFF" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                app:srcCompat="@drawable/lean2" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:background="@drawable/downloadbutton"
                android:text="Free Download"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:spinning_bar_color="#FFFFFF" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/web1" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:background="@drawable/downloadbutton"
                android:text="Vist Link"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:spinning_bar_color="#FFFFFF" />



</LinearLayout>

    </ScrollView>
<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/bottom_navigation"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:background="@color/colorPrimary"-->
<!--        app:itemBackground="@color/colorPrimary"-->
<!--        app:itemIconTint="@drawable/selector"-->
<!--        app:itemTextColor="@drawable/selector"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:menu="@menu/menu_navigation" />-->

</RelativeLayout>